Setup comparisons routes in api and added rake tasks for user managemnet
